--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,6 +1,22 @@
+<div *ngIf="selectedHero">
+  <h2>{{ selectedHero.name | uppercase }} details</h2>
+  <div>
+    <span>id: </span>
+    {{ selectedHero.id }}
+  </div>
+  <div>
+    <label
+      >name:<input [(ngModel)]="selectedHero.name" placeholder="name" />
+    </label>
+  </div>
+</div>
 <h2>My Heroes</h2>
 <ul class="heroes">
-  <li *ngFor="let hero of heroes">
-<span class="badge">{{hero.id}} </span> {{hero.name}}
+  <li
+    *ngFor="let hero of heroes"
+    (click)="onSelect(hero)"
+    [class.selected]="hero === selectedHero"
+  >
+    <span class="badge">{{ hero.id }} </span> {{ hero.name }}
   </li>
 </ul>
